--- a/index.html
+++ b/index.html
@@ -7258,7 +7258,7 @@
                             line-height: 1.3856375em;
                             text-align: center;
                           ">
-                          <a id="dnOfzXO0P4HDnp5R" target="_blank" rel="noopener" href="https://www.dedust.io" style="color: #bf0d0b; pointer-events: all" data-interstitial-link="">BUY NOW</a>
+                          <a id="dnOfzXO0P4HDnp5R" target="_blank" rel="noopener" href="#" style="color: #bf0d0b; pointer-events: all" data-interstitial-link="">BUY NOW</a>
                         </p>
                       </div>
                     </div>
