--- a/index.html
+++ b/index.html
@@ -10230,7 +10230,7 @@
                           100ms both paused,
                         linear_fade 400ms linear both paused;
                     ">
-                    <a id="XJGJStTiDnt7SRPR" target="_blank" rel="noopener" href="https://t.me/TONBrump" style="pointer-events: all" data-interstitial-link=""><div id="B6uiXNWLNC0ehwG4" style="width: 100%; height: 100%; opacity: 1">
+                    <a id="XJGJStTiDnt7SRPR" target="_blank" rel="noopener" href="https://t.me/brump_sui" style="pointer-events: all" data-interstitial-link=""><div id="B6uiXNWLNC0ehwG4" style="width: 100%; height: 100%; opacity: 1">
                         <div id="Vmt9hJSVb8fxoRJp" style="
                             transform: scale(1, 1);
                             width: 100%;
