--- a/index.html
+++ b/index.html
@@ -7972,7 +7972,7 @@
                         text-shadow: 0em 0.0375em 0.159375em
                           rgba(0, 0, 0, 0.325);
                       ">
-                      <span id="We5QeGRDMMPvogQy" style="color: #eb243f; font-weight: 700">LP BURNED</span><br>
+                      <!-- <span id="We5QeGRDMMPvogQy" style="color: #eb243f; font-weight: 700">LP BURNED</span><br> -->
                     </p>
                   </div>
                 </div>
@@ -8009,7 +8009,7 @@
                         text-shadow: 0em 0.0375em 0.159375em
                           rgba(0, 0, 0, 0.325);
                       ">
-                      <span id="q4NFpAur4qjKROF4" style="color: #eb243f; font-weight: 700">1,000,000,000 </span><br>
+                      <!-- <span id="q4NFpAur4qjKROF4" style="color: #eb243f; font-weight: 700">1,000,000,000 </span><br> -->
                     </p>
                   </div>
                 </div>
@@ -8046,7 +8046,7 @@
                         text-shadow: 0em 0.0375em 0.159375em
                           rgba(0, 0, 0, 0.325);
                       ">
-                      <span id="f7at9tHihoUhgiut" style="color: #eb243f; font-weight: 700">CONTRACT REVOKE</span><br>
+                      <!-- <span id="f7at9tHihoUhgiut" style="color: #eb243f; font-weight: 700">CONTRACT REVOKE</span><br> -->
                     </p>
                   </div>
                 </div>
