--- a/index.html
+++ b/index.html
@@ -7098,7 +7098,7 @@
                         text-shadow: 0em 0.0375em 0.159375em
                           rgba(0, 0, 0, 0.325);
                       ">
-                      <span id="wPKLlx9e40syj2pe" style="color: #eb243f; font-weight: 700">BRUMP on SUI</span><br>
+                      <span id="wPKLlx9e40syj2pe" style="color: #eb243f; font-weight: 700">BRUMP on Xrp</span><br>
                     </p>
                   </div>
                 </div>
@@ -7137,7 +7137,7 @@
                         text-shadow: 0em 0.0375em 0.159375em
                           rgba(0, 0, 0, 0.325);
                       ">
-                      <span id="zzkyJipEro06ppB7" style="color: #000000">The president of SUI</span><br>
+                      <span id="zzkyJipEro06ppB7" style="color: #000000">The president of Xrpl</span><br>
                     </p>
                   </div>
                 </div>
@@ -7376,7 +7376,7 @@
                           rgba(0, 0, 0, 0.325);
                       ">
                       <span id="FAOchz7QudspxOMx" style="color: #000000">one of cryptos most significant ​cultural icons and the
-                        mascot of SUI chain</span>
+                        mascot of XRPL </span>
                     </p>
                     <p id="lkgoQR43m5M0xX48" style="
                         color: #000000;
@@ -8178,7 +8178,7 @@
                         text-shadow: 0em 0.0375em 0.159375em
                           rgba(0, 0, 0, 0.325);
                       ">
-                      <span id="DPsVXD3vm5x92KjB" style="color: #eb243f; font-weight: 700">SUI</span><br>
+                      <span id="DPsVXD3vm5x92KjB" style="color: #eb243f; font-weight: 700">XRPL</span><br>
                     </p>
                   </div>
                 </div>
@@ -9360,7 +9360,7 @@
                             line-height: 1.34679038em;
                             text-align: center;
                           ">
-                          <span id="p5OH8f4vXWJpCYua" style="color: #00bf63">Sui wallet Logo update </span><br>
+                          <span id="p5OH8f4vXWJpCYua" style="color: #00bf63">XRPL wallet Logo update </span><br>
                         </p>
                         <p id="aM5wnYB6BtKwluy3" style="
                             color: #00bf63;
@@ -9849,7 +9849,7 @@
                         text-shadow: 0em 0.0375em 0.159375em
                           rgba(0, 0, 0, 0.325);
                       ">
-                      <a id="GsdDTO6zA2qZi5XU" target="_blank" rel="noopener" href="#" style="color: #000000; pointer-events: all" data-interstitial-link="">1. Buy using Sui Wallet:</a>
+                      <a id="GsdDTO6zA2qZi5XU" target="_blank" rel="noopener" href="#" style="color: #000000; pointer-events: all" data-interstitial-link="">1. Buy using Xumm Wallet:</a>
                     </p>
                     <p id="tLpsh2Bl38Ff5Zod" style="
                         color: #000000;
@@ -9874,7 +9874,7 @@
                         text-shadow: 0em 0.0375em 0.159375em
                           rgba(0, 0, 0, 0.325);
                       ">
-                      <a id="CpreoiuEBZDjhim0" target="_blank" rel="noopener" href="#" style="color: #000000; pointer-events: all" data-interstitial-link="">Download and install Sui ​Wallet</a><br>
+                      <a id="CpreoiuEBZDjhim0" target="_blank" rel="noopener" href="#" style="color: #000000; pointer-events: all" data-interstitial-link="">Download and install XUMM ​Wallet</a><br>
                     </p>
                     <p id="oNJi3iWMMJpdQfb4" style="
                         color: #000000;
@@ -9923,7 +9923,7 @@
                         text-shadow: 0em 0.0375em 0.159375em
                           rgba(0, 0, 0, 0.325);
                       ">
-                      <a id="JT86zaDIdEWpIvuI" target="_blank" rel="noopener" href="#" style="color: #000000; pointer-events: all" data-interstitial-link="">2. Add SUI to your wallet</a><br>
+                      <a id="JT86zaDIdEWpIvuI" target="_blank" rel="noopener" href="#" style="color: #000000; pointer-events: all" data-interstitial-link="">2. Add XUMM to your wallet</a><br>
                     </p>
                     <p id="ouqGtvKFT72G2ROf" style="
                         color: #000000;
@@ -9950,7 +9950,7 @@
                         text-shadow: 0em 0.0375em 0.159375em
                           rgba(0, 0, 0, 0.325);
                       ">
-                      <a id="Eao2BWLbH5Pn3pzj" target="_blank" rel="noopener" href="#" style="color: #000000; pointer-events: all" data-interstitial-link="">3. Swap SUI for BRUMP</a><br>
+                      <a id="Eao2BWLbH5Pn3pzj" target="_blank" rel="noopener" href="#" style="color: #000000; pointer-events: all" data-interstitial-link="">3. Swap XUMM for BRUMP</a><br>
                     </p>
                   </div>
                 </div>
@@ -10073,7 +10073,7 @@
                               1282ms 100ms both paused,
                             linear_fade 400ms linear both paused;
                         ">
-                        <a id="exwJUJXNlJxI84o0" target="_blank" rel="noopener" href="https://x.com/brumpsui" style="pointer-events: all" data-interstitial-link=""><div id="DlHRyK2DFLG80OcP" style="width: 100%; height: 100%; opacity: 1">
+                        <a id="exwJUJXNlJxI84o0" target="_blank" rel="noopener" href="https://x.com/brumptrump" style="pointer-events: all" data-interstitial-link=""><div id="DlHRyK2DFLG80OcP" style="width: 100%; height: 100%; opacity: 1">
                             <div id="KiZSkdRasE5p6W0n" style="
                                 transform: scale(1, 1);
                                 width: 100%;
@@ -10230,7 +10230,7 @@
                           100ms both paused,
                         linear_fade 400ms linear both paused;
                     ">
-                    <a id="XJGJStTiDnt7SRPR" target="_blank" rel="noopener" href="https://t.me/brump_sui" style="pointer-events: all" data-interstitial-link=""><div id="B6uiXNWLNC0ehwG4" style="width: 100%; height: 100%; opacity: 1">
+                    <a id="XJGJStTiDnt7SRPR" target="_blank" rel="noopener" href="https://t.me/brumptrump" style="pointer-events: all" data-interstitial-link=""><div id="B6uiXNWLNC0ehwG4" style="width: 100%; height: 100%; opacity: 1">
                         <div id="Vmt9hJSVb8fxoRJp" style="
                             transform: scale(1, 1);
                             width: 100%;
